cursive-bootstrap/tests/ui/E-TYP/E-TYP-2406.cursive
// RUN: compile-fail
// DIAG: E-TYP-2406
// SPEC: 5.3
// DESC: Conflicting field names from multiple classes

class HasX {
    x: i32
}

class HasXFloat {
    x: f64
}

record Point <: HasX, HasXFloat {  //~ ERROR E-TYP-2406
    x: i32
}




public procedure main(move ctx: Context) -> i32 {
    return 0
}






